--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "playground",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,6 +15,7 @@
     "@mediapipe/tasks-vision": "^0.10.14",
     "@react-email/components": "^0.0.22",
     "@react-email/render": "^0.0.17",
+    "@react-pdf/renderer": "^3.4.4",
     "clsx": "^2.1.1",
     "next": "14.2.5",
     "react": "^18",
